@@ -4,6 +4,6 @@ require(['jquery'],function($) {
         e.preventDefault();
         $(this).toggleClass("grid");
         $(".my_courses_list .coursebox").toggleClass('grid col-md-6');
-        $(".my_courses_list .coursebox").toggleClass('list col-lg-12');
+        $(".my_courses_list .coursebox").toggleClass('list col-md-12');
     });
 });
