@@ -33,6 +33,8 @@ define('BLOCKS_MY_COURSES_SHOWGRADES_NO', '0');
 define('BLOCKS_MY_COURSES_SHOWGRADES_YES', '1');
 define('BLOCKS_MY_COURSES_STARTGRID_NO', '0');
 define('BLOCKS_MY_COURSES_STARTGRID_YES', '1');
+define('BLOCKS_MY_COURSES_DEFAULT_COURSES_ROW', '4');
+define('BLOCKS_MY_COURSES_DEFAULT_COL_SIZE', '3');
 /**
  * Display overview for courses
  *
