@@ -110,3 +110,15 @@
     -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
     box-shadow: inset 0 1px 2px rgba(0,0,0,.1);
 }
+
+.block_my_courses #box-or-lines, [data-block='my_courses'] #box-or-lines {
+    width: 37px;
+    height: 29px;
+    float: right;
+    text-indent: -999em;
+    overflow: hidden;
+    transition: all 0.5s ease;
+    background: url([[pix:block_my_courses|block_lines]]) no-repeat left top; }
+.block_my_courses #box-or-lines.grid, [data-block='my_courses'] #box-or-lines.grid {
+    background-position: right top;
+    transition: all 0.5s ease; }
