@@ -24,6 +24,6 @@
 
 defined('MOODLE_INTERNAL') || die();
 
-$plugin->version   = 2017021004;        // The current plugin version (Date: YYYYMMDDXX)
+$plugin->version   = 2017021400;        // The current plugin version (Date: YYYYMMDDXX)
 $plugin->requires  = 2016051900;        // Requires this Moodle version
 $plugin->component = 'block_my_courses'; // Full name of the plugin (used for diagnostics)
