@@ -27,3 +27,9 @@ Working proof of grades case with progress bar that is same but diff variables t
 10/2/17
 
 Fixed issue with grade instance fetching
+
+14/2/17
+
+Added core grid and list view functionality
+
+Added settings for max courses in row of grid format and fixed JS issue
